--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
+@import '~antd/dist/antd.css';
+
 .App {
-  text-align: center;
+  text-align: center; 
 }
 
 .App-logo {
@@ -35,4 +37,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+.pageColumn {
+  padding-left: 20px !important;
+  padding-right: 20px !important;
 }
