--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,26 @@
     transform: rotate(360deg);
   }
 }
-.pageColumn {
+.PageHeader {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  top:0;
+}
+.searchContainer {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+.searchBar {
+  display: inline-block;
+  vertical-align: middle;
+}
+.pageContent {
+  margin-top:80px !important;
   padding-left: 20px !important;
   padding-right: 20px !important;
+}
+.pdbottom {
+  padding-bottom: 20px !important;
 }
