--- a/src/App.scss
+++ b/src/App.scss
@@ -67,3 +67,15 @@
 .nationalityItem:hover {
   cursor:pointer;
 }
+.flagIcon {
+  margin-left: 10px;
+}
+.selectedNat {
+  background-color: #d5e8e7;
+}
+.fabButton {
+  position: fixed;
+  z-index: 99;
+  bottom:20px;
+  right:20px;
+}
